# takobot

./: .gitignore  AGENTS.md  CNAME  DEPLOYMENT.md  FEATURES.md  MANIFEST.in  MEMORY.md  ONBOARDING.md  README.md  SECURITY_MODEL.md  SKILLS.md  SOUL.md  TOOLS.md  VISION.md  index.html  pyproject.toml  requirements.txt  setup.sh  start.sh  tako  tako.py  tako.sh  tako.toml
.github/workflows/: workflow.yml
archives/: README.md
areas/: README.md
daily/: 2026-02-10.md
dev/: setup_repo_checkout.sh
docs/: README.md
docs/concepts/: conversation-context.md  inference-providers.md  runtime-model.md
docs/reference/: release-process.md  tako-toml.md  tui-commands.md
docs/start/: quickstart.md
memory/: MEMORY.md  README.md
memory/contradictions/: contradictions.md
memory/dailies/: 2026-02-10.md  2026-02-11.md  2026-02-25.md  README.md
memory/people/: README.md
memory/places/: README.md
memory/reflections/: README.md
memory/things/: README.md
projects/: README.md
resources/: README.md  openclaw-top-skills-2026-02-15.md
resources/world/: README.md
skills/: README.md
skills/agent-browser/: README.md  playbook.md  policy.toml
skills/agent-cli-inferencing/: README.md  playbook.md  policy.toml
skills/atxp/: README.md  playbook.md  policy.toml
skills/byterover/: README.md  playbook.md  policy.toml
skills/find-skills/: README.md  playbook.md  policy.toml
skills/github/: README.md  playbook.md  policy.toml
skills/gog/: README.md  playbook.md  policy.toml
skills/mcporter-mcp/: README.md  playbook.md  policy.toml
skills/self-improving-agent/: README.md  playbook.md  policy.toml
skills/skill-creator/: README.md  (+2 more)
tako_bot/: __init__.py  app.py  bootstrap_tty.py  cli.py  config.py  daily.py  dose.py  ens.py  git_safety.py  inference.py  keys.py  locks.py  operator.py  paths.py  self_update.py  soul.py  tool_ops.py  util.py  workspace.py  xmtp.py
takobot/: __init__.py  app.py  ascii_octo.py  bootstrap_tty.py  capability_frontmatter.py  cli.py  config.py  conversation.py  dose.py  git_safety.py  identity.py  inference.py  input_history.py  jobs.py  keys.py  life_stage.py  memory_frontmatter.py  mission.py  node_runtime.py  operator.py  operator_profile.py  pairing.py  paths.py  problem_tasks.py  rag_context.py  research.py  skillpacks.py  soul.py  starter_tools.py  tool_ops.py  topic_research.py  workspace.py  xmtp.py  xmtp_runtime.py
tasks/: README.md
tests/: helpers.py  test_app_child_context.py  test_app_commands.py  test_app_stage_policy.py  test_capability_frontmatter.py  test_cli_app_mode.py  test_cli_xmtp_resilience.py  test_config_life_stage.py  test_config_world_watch.py  test_conversation.py  test_features_contract.py  test_fresh_workspace.py  test_git_safety.py  test_identity_and_mission.py  test_identity_updates.py  test_inference_pi_runtime.py  test_inference_stream_tasks.py  test_input_history.py  test_jobs.py  test_life_stage_policy.py  test_operator_profile.py  test_packaging_shell_script.py  test_rag_context.py  test_research_workflow.py  test_runtime_event_bus.py  test_runtime_world_watch.py  test_sensors_curiosity.py  test_sensors_rss.py  test_tool_ops.py  test_topic_research.py  test_web_tools.py  test_xmtp_profile.py
tools/: README.md
(+81 files in other folders)
