[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "takobot"
version = "0.1.50"
description = "Takobot: your highly autonomous and incredibly curious octopus friend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual",
  "web3",
  "xmtp",
]
authors = [{ name = "pierce403" }]
keywords = ["agent", "tui", "xmtp", "gtd", "para"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://tako.bot"
Repository = "https://github.com/pierce403/takobot"
Issues = "https://github.com/pierce403/takobot/issues"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
takobot = "takobot.cli:main"
tako = "takobot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["takobot*"]

[tool.setuptools]
script-files = ["tako.sh"]

[tool.setuptools.package-data]
takobot = ["templates/**/*.md", "templates/**/*.toml"]

[tool.setuptools.exclude-package-data]
takobot = ["**/*.pyc", "**/__pycache__/*"]
